tests/snapshots/run_wpt_conformance__coreml_dequantizeLinear_int32_1D_tensor_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int32 1D tensor with float32 1D scale, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type dequantize: Param 'zero_point' has incorrect type for operator 'ios17.dequantize'. Expected { [...]>, [...]>, tensor<int8, tensor<uint8 }; got tensor<int32, [2]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i32[2];
  }

  consts {
    operand_1: f32[2] @bytes([42, 101, 143, 63, 43, 101, 143, 62]);
    operand_2: i32[2] @bytes([89, 126, 0, 0, 78, 176, 218, 255]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
