tests/snapshots/run_wpt_conformance__coreml_dequantizeLinear_int4_1D_tensor_of_even_size_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int4 1D tensor of even size with float32 1D scale, coreml
 Failed to build graph: graph conversion failed for coreml: int4/uint4 tensors are not supported in CoreML conversion yet

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i4[2];
  }

  consts {
    operand_1: f32[2] @bytes([42, 101, 143, 63, 42, 101, 143, 63]);
    operand_2: i4[2] @bytes([14]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
