tests/snapshots/run_wpt_conformance__coreml_dequantizeLinear_int4_1D_tensor_of_odd_size_with_float16_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int4 1D tensor of odd size with float16 1D scale, coreml
 Failed to build graph: graph conversion failed for coreml: int4/uint4 tensors are not supported in CoreML conversion yet

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i4[3];
  }

  consts {
    operand_1: f16[1] @bytes([123, 60]);
    operand_2: i4[1] @bytes([208]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
